--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,6 +8,9 @@
     "com.unity.feature.development": "1.0.1",
     "com.unity.formats.fbx": "4.2.1",
     "com.unity.inputsystem": "1.6.1",
+    "com.unity.multiplayer.samples.coop": "https://github.com/Unity-Technologies/com.unity.multiplayer.samples.coop.git?path=/Packages/com.unity.multiplayer.samples.coop#main",
+    "com.unity.multiplayer.tools": "1.1.1",
+    "com.unity.netcode.gameobjects": "1.5.2",
     "com.unity.postprocessing": "3.2.2",
     "com.unity.probuilder": "5.1.1",
     "com.unity.purchasing": "4.9.3",
